--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.1",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^5.3.10",
     "tailwindcss": "^3.3.5"
   },
